--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "**TP - Dart Master**",
   "main": "cli.js",
   "dependencies": {
+    "commander": "^4.1.0",
+    "express": "^4.17.1",
     "inquirer": "^7.0.2",
-    "commander": "^4.1.0"
+    "mongoose": "^5.8.9"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mongodb": "^3.5.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
