--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "commander": "^4.1.0",
     "express": "^4.17.1",
     "inquirer": "^7.0.2",
-    "mongoose": "^5.8.9"
+    "mongoose": "^5.8.9",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
+    "axios": "^0.19.2",
     "mongodb": "^3.5.2"
   },
   "scripts": {
