--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "commander": "^4.1.0",
     "express": "^4.17.1",
     "inquirer": "^7.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^5.8.9",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "axios": "^0.19.2",
